--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/balmjs/balm-html#readme",
   "devDependencies": {
-    "balm": "^0.3.0",
+    "balm": "^0.3.0-beta3",
     "gulp": "^3.9.1"
   }
 }
