--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/balmjs/balm-html#readme",
   "devDependencies": {
-    "balm": "^0.5.0-beta.6",
+    "balm": "^0.5.0",
     "gulp": "^3.9.1"
   }
 }
