--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "balm-html",
+  "name": "balm-demo-html",
   "private": true,
   "dependencies": {
-    "bourbon": "^4.2.7",
+    "bourbon": "^4.3.4",
     "neat": "^1.8.0",
     "jquery": "^3.0.0"
   }
