--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "balm-html",
+  "name": "balm-demo-html",
   "version": "1.0.0",
   "description": "The balm demo for html project",
   "scripts": {
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/balmjs/balm-html#readme",
   "devDependencies": {
-    "balm": "^0.6.0-beta.3",
+    "balm": "^0.6.0-beta.5",
     "gulp": "^3.9.1"
   }
 }
