--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "balm-demo-html",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "The balm demo for html project",
   "scripts": {
     "dev": "balm",
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "jquery": "1.12",
-    "jquery-migrate": "^1.4.1",
-    "normalize.css": "3.0.3"
+    "jquery": "^3.3.1",
+    "jquery-migrate": "^3.3.1",
+    "normalize.css": "8.0.0"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.11.0",
