--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.11.0",
     "babel-eslint": "^10.0.0",
-    "balm": "^3.0.0-rc.2"
+    "balm": "^3.0.0"
   }
 }
